# crown-dietitian-ai

./: .gitignore  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8d06e26f3e1c_initial_models_migration.py  a1d1c270f913_relationships.py  aafd25740a63_email_and_mobile_validators.py  da9d64f4f058_models.py
backend/app/: config.py  database.py  enums.py  main.py  models.py  schemas.py  service.py
backend/app/customers/: routes.py  schemas.py  service.py
frontend/: globals.css  index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: fetchClient.ts  main.tsx  routeTree.gen.ts
frontend/src/components/: app-sidebar.tsx  customer-form.tsx  modal-form-container.tsx  nav-main.tsx  sheet-form-container.tsx
frontend/src/components/form-containers/: sheet-form-container.tsx  types.ts
frontend/src/customers/: queries.ts  types.ts
frontend/src/customers/customer-table/: customer-table.tsx
frontend/src/customers/forms/: customer-form.tsx
frontend/src/customers/hooks/: form-hooks.ts
frontend/src/lib/api/: v1.d.ts
frontend/src/queries/: customers.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/clients/: index.tsx
