[project]
name = "dietician-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "autopep8>=2.3.2",
    "fastapi[all]>=0.115.11",
    "flake8>=7.1.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.23",
]
